deploy/seed/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opendatahub
  labels:
    opendatahub.io/application-namespace: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: opendatahub-operator-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-ingress
  labels:
    network.openshift.io/policy-group: ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operators
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-config
