deploy/seed/ingress.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
spec:
  domain: apps.ocp-sim.test
  appsDomain: apps.ocp-sim.test
status:
  defaultPlacement: Workers
